--- a/en/tools/dev/xml-json/index.html
+++ b/en/tools/dev/xml-json/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8846557285079359" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XML ↔ JSON Converter - Toolneat</title>
-  <meta name="description" content="Free online XML and JSON converter. Convert XML to JSON and JSON to XML easily.">
+  <meta name="description" content="Free online XML and JSON converter. Convert XML to JSON and JSON to XML easily. Essential for API response conversion, data format integration, and config file migration.">
+
+  <!-- Canonical & hreflang -->
+  <link rel="canonical" href="https://toolneat.com/en/tools/dev/xml-json/">
+  <link rel="alternate" hreflang="ko" href="https://toolneat.com/tools/dev/xml-json/">
+  <link rel="alternate" hreflang="en" href="https://toolneat.com/en/tools/dev/xml-json/">
+  <link rel="alternate" hreflang="x-default" href="https://toolneat.com/tools/dev/xml-json/">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Toolneat">
+  <meta property="og:title" content="XML ↔ JSON Converter - Toolneat">
+  <meta property="og:description" content="Convert XML to JSON and JSON to XML easily.">
+  <meta property="og:url" content="https://toolneat.com/en/tools/dev/xml-json/">
+  <meta property="og:image" content="https://toolneat.com/assets/images/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="theme-color" content="#2563eb">
+
   <link rel="icon" href="/favicon.ico" sizes="48x48">
   <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg">
   <link rel="stylesheet" href="/assets/css/output.css">
@@ -12,6 +30,30 @@
   <script src="/assets/js/common.js"></script>
   <script src="/assets/js/i18n.js"></script>
   <script src="/assets/js/components.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "XML ↔ JSON Converter",
+    "description": "Free online XML and JSON converter. Convert XML to JSON and JSON to XML easily. Essential for API response conversion, data format integration, and config file migration.",
+    "url": "https://toolneat.com/en/tools/dev/xml-json",
+    "applicationCategory": "DeveloperApplication",
+    "operatingSystem": "Any",
+    "browserRequirements": "Requires JavaScript",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "Toolneat",
+      "url": "https://toolneat.com"
+    }
+  }
+  </script>
+
   <script src="https://cdn.jsdelivr.net/npm/xml-js@1.6.11/dist/xml-js.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0"></script>
   <script src="../../../../assets/js/tools-data.js"></script>
