--- a/tools.html
+++ b/tools.html
@@ -556,7 +556,7 @@
           <svg class="w-6 h-6 text-blue-600 dark:text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"/></svg>
           <span data-i18n="nav.dev">개발 도구</span>
         </h2>
-        <a href="/tools/dev/" class="text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">
+        <a href="/tools/dev" class="text-blue-600 dark:text-blue-400 text-sm font-medium hover:underline">
           자세히 보기 →
         </a>
       </div>
@@ -606,7 +606,7 @@
           <svg class="w-6 h-6 text-green-600 dark:text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg>
           <span data-i18n="nav.life">생활 도구</span>
         </h2>
-        <a href="/tools/life/" class="text-green-600 dark:text-green-400 text-sm font-medium hover:underline">
+        <a href="/tools/life" class="text-green-600 dark:text-green-400 text-sm font-medium hover:underline">
           자세히 보기 →
         </a>
       </div>
@@ -665,7 +665,7 @@
           <svg class="w-6 h-6 text-red-600 dark:text-red-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg>
           <span data-i18n="nav.pdf">PDF 도구</span>
         </h2>
-        <a href="/tools/pdf/" class="text-red-600 dark:text-red-400 text-sm font-medium hover:underline">
+        <a href="/tools/pdf" class="text-red-600 dark:text-red-400 text-sm font-medium hover:underline">
           자세히 보기 →
         </a>
       </div>
@@ -689,7 +689,7 @@
           <svg class="w-6 h-6 text-purple-600 dark:text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"/><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
           <span data-i18n="nav.game">게임</span>
         </h2>
-        <a href="/tools/game/" class="text-purple-600 dark:text-purple-400 text-sm font-medium hover:underline">
+        <a href="/tools/game" class="text-purple-600 dark:text-purple-400 text-sm font-medium hover:underline">
           전체 보기 →
         </a>
       </div>
